src/objects/Vacancy_D2D__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Assigned</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Vacancy_D2Ds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closing_Report_Schedule_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report Schedule Secondary</label>
        <referenceTo>Closing_Report_Schedule__c</referenceTo>
        <relationshipLabel>Vacancy Schedules (Closing Report Schedule Secondary)</relationshipLabel>
        <relationshipName>Vacancy_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closing_Report_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report Schedule</label>
        <referenceTo>Closing_Report_Schedule__c</referenceTo>
        <relationshipLabel>Vacancy Schedules</relationshipLabel>
        <relationshipName>Vacancy_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacancy_Date__c</fullName>
        <inlineHelpText>Date for which this vacancy is applicable</inlineHelpText>
        <label>Vacancy Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <label>Vacancy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TR1__Job__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Consulting</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipName>Vacancy_D2Ds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vacancy Schedule</label>
    <nameField>
        <displayFormat>D2D-{000000}</displayFormat>
        <label>D2D Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacancy Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>